log/test_2024-03-15_13-34-31/rtabrs/stdout.log
[1m============================= test session starts ==============================[0m
platform linux -- Python 3.10.12, pytest-6.2.5, py-1.10.0, pluggy-0.13.0
cachedir: /home/dany/Desktop/rtabmap_ws/build/rtabrs/.pytest_cache
rootdir: /home/dany/Desktop/rtabmap_ws/src/rtabrs
plugins: ament-lint-0.12.10, ament-pep257-0.12.10, ament-xmllint-0.12.10, launch-testing-1.0.5, ament-flake8-0.12.10, launch-testing-ros-0.19.7, ament-copyright-0.12.10, cov-3.0.0, colcon-core-0.15.2
[1mcollecting ... [0m[1m
collected 3 items                                                              [0m

test/test_copyright.py [33ms[0m[32m                                                 [ 33%][0m
test/test_flake8.py [31mF[0m[31m                                                    [ 66%][0m
test/test_pep257.py [31mF[0m[31m                                                    [100%][0m

=================================== FAILURES ===================================
[31m[1m_________________________________ test_flake8 __________________________________[0m
[1m[31mtest/test_flake8.py[0m:23: in test_flake8
    [94massert[39;49;00m rc == [94m0[39;49;00m, \
[1m[31mE   AssertionError: Found 4 code style errors / warnings:[0m
[1m[31mE     ./setup.py:16:100: E501 line too long (108 > 99 characters)[0m
[1m[31mE     ./launch/launch2.py:4:91: E999 SyntaxError: invalid syntax[0m
[1m[31mE     ./launch/launch.py:4:1: E302 expected 2 blank lines, found 1[0m
[1m[31mE     ./launch/launch.py:22:85: W291 trailing whitespace[0m
[1m[31mE   assert 1 == 0[0m
----------------------------- Captured stdout call -----------------------------

./setup.py:16:100: E501 line too long (108 > 99 characters)
        (os.path.join('share', package_name, 'launch'), glob(os.path.join('launch', '*launch.[pxy][yma]*')))
                                                                                                   ^

./launch/launch2.py:4:91: E999 SyntaxError: invalid syntax
from launch.substitutions import LaunchConfiguration, ThisLaunchFileDir, PythonExpression``
                                                                                          ^

./launch/launch.py:4:1: E302 expected 2 blank lines, found 1
def generate_launch_description():
^

./launch/launch.py:22:85: W291 trailing whitespace
        # Now launch rtabmap via cmdline since the published names should be correct 
                                                                                    ^

1     E302 expected 2 blank lines, found 1
1     E501 line too long (108 > 99 characters)
1     E999 SyntaxError: invalid syntax
1     W291 trailing whitespace

7 files checked
4 errors

'E'-type errors: 3
'W'-type errors: 1

Checked files:

* ./setup.py
* ./test/test_flake8.py
* ./test/test_pep257.py
* ./test/test_copyright.py
* ./launch/launch2.py
* ./launch/launch.py
* ./rtabrs/__init__.py
----------------------------- Captured stderr call -----------------------------
option --max-complexity: please update from optparse string `type=` to argparse callable `type=` -- this will be an error in the future
[31m[1m_________________________________ test_pep257 __________________________________[0m
[1m[31mtest/test_pep257.py[0m:23: in test_pep257
    [94massert[39;49;00m rc == [94m0[39;49;00m, [33m'[39;49;00m[33mFound code style errors / warnings[39;49;00m[33m'[39;49;00m
[1m[31mE   AssertionError: Found code style errors / warnings[0m
[1m[31mE   assert 1 == 0[0m
----------------------------- Captured stdout call -----------------------------
checking ./launch/launch.py
checking ./launch/launch2.py
./launch/launch2.py: Cannot parse file.
checking ./rtabrs/__init__.py
checking ./setup.py
checking ./test/test_copyright.py
checking ./test/test_flake8.py
checking ./test/test_pep257.py
checking test/test_copyright.py
checking test/test_flake8.py
checking test/test_pep257.py
1 errors
----------------------------- Captured stderr call -----------------------------
Error in file ./launch/launch2.py: Cannot parse file.
-- generated xml file: /home/dany/Desktop/rtabmap_ws/build/rtabrs/pytest.xml ---
=========================== short test summary info ============================
FAILED test/test_flake8.py::test_flake8 - AssertionError: Found 4 code style ...
FAILED test/test_pep257.py::test_pep257 - AssertionError: Found code style er...
[31m=================== [31m[1m2 failed[0m, [33m1 skipped[0m, [33m2 warnings[0m[31m in 0.28s[0m[31m ===================[0m
